renderer_vulkan: add Extended Dynamic State user setting
Add configurable EDS levels (Disabled/EDS1/EDS2/EDS3) to allow users to
troubleshoot graphics issues by controlling which Vulkan Extended Dynamic
State features are enabled. Defaults to EDS3 for maximum performance.

Implements setting in both desktop and Android frontends with proper
translations and descriptions.

Signed-off-by: Zephyron <zephyron@citron-emu.org>

--- a/src/android/app/src/main/res/values/arrays.xml
+++ b/src/android/app/src/main/res/values/arrays.xml
@@ -404,6 +404,20 @@
         <item>2</item>
     </integer-array>
 
+    <string-array name="extendedDynamicStateNames">
+        <item>Disabled</item>
+        <item>EDS1</item>
+        <item>EDS2</item>
+        <item>EDS3</item>
+    </string-array>
+
+    <integer-array name="extendedDynamicStateValues">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </integer-array>
+
     <string-array name="vramUsageModeNames">
         <item>Conservative</item>
         <item>Aggressive</item>
