fix: Multiplayer network fixes and airplane mode
- Auto-select network interface for direct connect/host room
- Always recreate ENet client on join for fresh bindings
- Add airplane mode toggle (Desktop & Android)
- Fix JWT verification with empty verify_uid
- Improve content-type handling for JWT endpoints

Signed-off-by: Zephyron <zephyron@citron-emu.org>

--- a/src/citron/configuration/configure_network.ui
+++ b/src/citron/configuration/configure_network.ui
@@ -25,6 +25,16 @@
         <string>General</string>
        </property>
        <layout class="QGridLayout" name="gridLayout_2">
+        <item row="0" column="0">
+         <widget class="QCheckBox" name="airplane_mode">
+          <property name="text">
+           <string>Airplane Mode</string>
+          </property>
+          <property name="toolTip">
+           <string>Disable all network functionality, similar to Nintendo Switch airplane mode</string>
+          </property>
+         </widget>
+        </item>
         <item row="1" column="1">
          <widget class="QComboBox" name="network_interface"/>
         </item>
