--- a/src/citron/configuration/configure_filesystem.ui
+++ b/src/citron/configuration/configure_filesystem.ui
@@ -219,6 +219,39 @@
       </widget>
      </item>
      <item>
+      <widget class="QGroupBox" name="updater_group">
+       <property name="title">
+        <string>Updater</string>
+       </property>
+       <layout class="QGridLayout" name="gridLayout_updater">
+        <item row="0" column="0" colspan="2">
+         <widget class="QCheckBox" name="enable_backups_checkbox">
+          <property name="text">
+           <string>Enable AppImage Backups</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QCheckBox" name="custom_backup_location_checkbox">
+          <property name="text">
+           <string>Use Custom Backup Location for AppImage Updates</string>
+          </property>
+         </widget>
+        </item>
+        <item row="2" column="0">
+         <widget class="QLineEdit" name="custom_backup_location_edit"/>
+        </item>
+        <item row="2" column="1">
+         <widget class="QToolButton" name="custom_backup_location_button">
+          <property name="text">
+           <string>...</string>
+          </property>
+         </widget>
+        </item>
+       </layout>
+      </widget>
+     </item>
+     <item>
       <widget class="QGroupBox" name="groupBox_5">
        <property name="title">
         <string>Caching</string>
