feat(ui): Toggle Online Column
Signed-off-by: Collecting <collecting@noreply.localhost>

--- a/src/citron/configuration/configure_ui.ui
+++ b/src/citron/configuration/configure_ui.ui
@@ -229,14 +229,21 @@
                                         </property>
                                     </widget>
                                 </item>
-                                <item row="5" column="0">
+                                <item row="5" column="0" colspan="2">
+                                    <widget class="QCheckBox" name="show_online_column">
+                                        <property name="text">
+                                            <string>Show Online Column</string>
+                                        </property>
+                                    </widget>
+                                </item>
+                                <item row="6" column="0">
                                     <widget class="QLabel" name="game_icon_size_label">
                                         <property name="text">
                                             <string>Game Icon Size:</string>
                                         </property>
                                     </widget>
                                 </item>
-                                <item row="5" column="1">
+                                <item row="6" column="1">
                                     <widget class="QComboBox" name="game_icon_size_combobox">
                                         <property name="sizePolicy">
                                             <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -246,14 +253,14 @@
                                         </property>
                                     </widget>
                                 </item>
-                                <item row="6" column="0">
+                                <item row="7" column="0">
                                     <widget class="QLabel" name="folder_icon_size_label">
                                         <property name="text">
                                             <string>Folder Icon Size:</string>
                                         </property>
                                     </widget>
                                 </item>
-                                <item row="6" column="1">
+                                <item row="7" column="1">
                                     <widget class="QComboBox" name="folder_icon_size_combobox">
                                         <property name="sizePolicy">
                                             <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -263,14 +270,14 @@
                                         </property>
                                     </widget>
                                 </item>
-                                <item row="7" column="0">
+                                <item row="8" column="0">
                                     <widget class="QLabel" name="row_1_label">
                                         <property name="text">
                                             <string>Row 1 Text:</string>
                                         </property>
                                     </widget>
                                 </item>
-                                <item row="7" column="1">
+                                <item row="8" column="1">
                                     <widget class="QComboBox" name="row_1_text_combobox">
                                         <property name="sizePolicy">
                                             <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
@@ -280,14 +287,14 @@
                                         </property>
                                     </widget>
                                 </item>
-                                <item row="8" column="0">
+                                <item row="9" column="0">
                                     <widget class="QLabel" name="row_2_label">
                                         <property name="text">
                                             <string>Row 2 Text:</string>
                                         </property>
                                     </widget>
                                 </item>
-                                <item row="8" column="1">
+                                <item row="9" column="1">
                                     <widget class="QComboBox" name="row_2_text_combobox">
                                         <property name="sizePolicy">
                                             <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
