--- a/src/citron/configuration/configure_ui.ui
+++ b/src/citron/configuration/configure_ui.ui
@@ -140,7 +140,7 @@
                                 <item row="4" column="1">
                                     <widget class="QCheckBox" name="rainbowModeCheckBox">
                                         <property name="text">
-                                            <string>Enable Rainbow Mode</string>
+                                            <string>Enable Rainbow Tab Buttons</string>
                                         </property>
                                     </widget>
                                 </item>
