feat(multiplayer): More QoL Improvements
Signed-off-by: Collecting <collecting@noreply.localhost>

--- a/src/citron/multiplayer/chat_room.ui
+++ b/src/citron/multiplayer/chat_room.ui
@@ -37,14 +37,7 @@
        <item>
         <widget class="QLineEdit" name="chat_message">
          <property name="placeholderText">
-          <string>Send Chat Message</string>
-         </property>
-        </widget>
-       </item>
-       <item>
-        <widget class="QPushButton" name="send_message">
-         <property name="text">
-          <string>Send Message</string>
+          <string>Type Here...</string>
          </property>
         </widget>
        </item>
