--- a/src/citron/configuration/configure_per_game.ui
+++ b/src/citron/configuration/configure_per_game.ui
@@ -399,13 +399,19 @@
           <x>0</x>
           <y>0</y>
           <width>318</width>
-          <height>600</height>
+          <height>836</height>
          </rect>
         </property>
         <property name="minimumSize">
          <size>
           <width>0</width>
-          <height>600</height>
+          <height>836</height>
+         </size>
+        </property>
+        <property name="maximumSize">
+         <size>
+          <width>16777215</width>
+          <height>836</height>
          </size>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_5">
@@ -460,89 +466,145 @@
             </item>
             <item>
              <layout class="QGridLayout" name="gridLayout_2">
-              <item row="6" column="1">
-               <widget class="QLineEdit" name="display_size">
-                <property name="enabled"><bool>true</bool></property>
-                <property name="readOnly"><bool>true</bool></property>
-               </widget>
-              </item>
-              <item row="3" column="1">
-               <widget class="QLineEdit" name="display_version">
-                <property name="enabled"><bool>true</bool></property>
-                <property name="readOnly"><bool>true</bool></property>
-               </widget>
-              </item>
               <item row="1" column="0">
-               <widget class="QLabel" name="label"><property name="text"><string>Name</string></property></widget>
-              </item>
-              <item row="4" column="0">
-               <widget class="QLabel" name="label_4"><property name="text"><string>Title ID</string></property></widget>
-              </item>
-              <item row="4" column="1">
-               <widget class="QLineEdit" name="display_title_id">
-                <property name="enabled"><bool>true</bool></property>
-                <property name="readOnly"><bool>true</bool></property>
+               <widget class="QLabel" name="label">
+                <property name="sizePolicy"><sizepolicy hsizetype="Preferred" vsizetype="Fixed"><horstretch>0</horstretch><verstretch>0</verstretch></sizepolicy></property>
+                <property name="minimumSize"><size><width>0</width><height>32</height></size></property>
+                <property name="text"><string>Name</string></property>
                </widget>
-              </item>
-              <item row="7" column="1">
-               <widget class="QLineEdit" name="display_filename">
-                <property name="enabled"><bool>true</bool></property>
-                <property name="readOnly"><bool>true</bool></property>
-               </widget>
-              </item>
-              <item row="5" column="1">
-               <widget class="QLineEdit" name="display_format">
-                <property name="enabled"><bool>true</bool></property>
-                <property name="readOnly"><bool>true</bool></property>
-               </widget>
-              </item>
-              <item row="7" column="0">
-               <widget class="QLabel" name="label_7"><property name="text"><string>Filename</string></property></widget>
               </item>
               <item row="1" column="1">
                <widget class="QLineEdit" name="display_name">
+                <property name="sizePolicy"><sizepolicy hsizetype="Expanding" vsizetype="Fixed"><horstretch>0</horstretch><verstretch>0</verstretch></sizepolicy></property>
+                <property name="minimumSize"><size><width>0</width><height>32</height></size></property>
                 <property name="enabled"><bool>true</bool></property>
                 <property name="readOnly"><bool>true</bool></property>
+               </widget>
+              </item>
+              <item row="2" column="0">
+               <widget class="QLabel" name="label_2">
+                <property name="sizePolicy"><sizepolicy hsizetype="Preferred" vsizetype="Fixed"><horstretch>0</horstretch><verstretch>0</verstretch></sizepolicy></property>
+                <property name="minimumSize"><size><width>0</width><height>32</height></size></property>
+                <property name="text"><string>Developer</string></property>
                </widget>
               </item>
               <item row="2" column="1">
                <widget class="QLineEdit" name="display_developer">
+                <property name="sizePolicy"><sizepolicy hsizetype="Expanding" vsizetype="Fixed"><horstretch>0</horstretch><verstretch>0</verstretch></sizepolicy></property>
+                <property name="minimumSize"><size><width>0</width><height>32</height></size></property>
+                <property name="enabled"><bool>true</bool></property>
+                <property name="readOnly"><bool>true</bool></property>
+               </widget>
+              </item>
+              <item row="3" column="0">
+               <widget class="QLabel" name="label_3">
+                <property name="sizePolicy"><sizepolicy hsizetype="Preferred" vsizetype="Fixed"><horstretch>0</horstretch><verstretch>0</verstretch></sizepolicy></property>
+                <property name="minimumSize"><size><width>0</width><height>32</height></size></property>
+                <property name="text"><string>Version</string></property>
+               </widget>
+              </item>
+              <item row="3" column="1">
+               <widget class="QLineEdit" name="display_version">
+                <property name="sizePolicy"><sizepolicy hsizetype="Expanding" vsizetype="Fixed"><horstretch>0</horstretch><verstretch>0</verstretch></sizepolicy></property>
+                <property name="minimumSize"><size><width>0</width><height>32</height></size></property>
+                <property name="enabled"><bool>true</bool></property>
+                <property name="readOnly"><bool>true</bool></property>
+               </widget>
+              </item>
+              <item row="4" column="0">
+               <widget class="QLabel" name="label_4">
+                <property name="sizePolicy"><sizepolicy hsizetype="Preferred" vsizetype="Fixed"><horstretch>0</horstretch><verstretch>0</verstretch></sizepolicy></property>
+                <property name="minimumSize"><size><width>0</width><height>32</height></size></property>
+                <property name="text"><string>Title ID</string></property>
+               </widget>
+              </item>
+              <item row="4" column="1">
+               <widget class="QLineEdit" name="display_title_id">
+                <property name="sizePolicy"><sizepolicy hsizetype="Expanding" vsizetype="Fixed"><horstretch>0</horstretch><verstretch>0</verstretch></sizepolicy></property>
+                <property name="minimumSize"><size><width>0</width><height>32</height></size></property>
                 <property name="enabled"><bool>true</bool></property>
                 <property name="readOnly"><bool>true</bool></property>
                </widget>
               </item>
               <item row="5" column="0">
-               <widget class="QLabel" name="label_5"><property name="text"><string>Format</string></property></widget>
+               <widget class="QLabel" name="label_5">
+                <property name="sizePolicy"><sizepolicy hsizetype="Preferred" vsizetype="Fixed"><horstretch>0</horstretch><verstretch>0</verstretch></sizepolicy></property>
+                <property name="minimumSize"><size><width>0</width><height>32</height></size></property>
+                <property name="text"><string>Format</string></property>
+               </widget>
               </item>
-              <item row="3" column="0">
-               <widget class="QLabel" name="label_3"><property name="text"><string>Version</string></property></widget>
+              <item row="5" column="1">
+               <widget class="QLineEdit" name="display_format">
+                <property name="sizePolicy"><sizepolicy hsizetype="Expanding" vsizetype="Fixed"><horstretch>0</horstretch><verstretch>0</verstretch></sizepolicy></property>
+                <property name="minimumSize"><size><width>0</width><height>32</height></size></property>
+                <property name="enabled"><bool>true</bool></property>
+                <property name="readOnly"><bool>true</bool></property>
+               </widget>
               </item>
               <item row="6" column="0">
-               <widget class="QLabel" name="label_6"><property name="text"><string>Size</string></property></widget>
+               <widget class="QLabel" name="label_6">
+                <property name="sizePolicy"><sizepolicy hsizetype="Preferred" vsizetype="Fixed"><horstretch>0</horstretch><verstretch>0</verstretch></sizepolicy></property>
+                <property name="minimumSize"><size><width>0</width><height>32</height></size></property>
+                <property name="text"><string>Size</string></property>
+               </widget>
               </item>
-              <item row="2" column="0">
-               <widget class="QLabel" name="label_2"><property name="text"><string>Developer</string></property></widget>
+              <item row="6" column="1">
+               <widget class="QLineEdit" name="display_size">
+                <property name="sizePolicy"><sizepolicy hsizetype="Expanding" vsizetype="Fixed"><horstretch>0</horstretch><verstretch>0</verstretch></sizepolicy></property>
+                <property name="minimumSize"><size><width>0</width><height>32</height></size></property>
+                <property name="enabled"><bool>true</bool></property>
+                <property name="readOnly"><bool>true</bool></property>
+               </widget>
+              </item>
+              <item row="7" column="0">
+               <widget class="QLabel" name="label_7">
+                <property name="sizePolicy"><sizepolicy hsizetype="Preferred" vsizetype="Fixed"><horstretch>0</horstretch><verstretch>0</verstretch></sizepolicy></property>
+                <property name="minimumSize"><size><width>0</width><height>32</height></size></property>
+                <property name="text"><string>Filename</string></property>
+               </widget>
+              </item>
+              <item row="7" column="1">
+               <widget class="QLineEdit" name="display_filename">
+                <property name="sizePolicy"><sizepolicy hsizetype="Expanding" vsizetype="Fixed"><horstretch>0</horstretch><verstretch>0</verstretch></sizepolicy></property>
+                <property name="minimumSize"><size><width>0</width><height>32</height></size></property>
+                <property name="enabled"><bool>true</bool></property>
+                <property name="readOnly"><bool>true</bool></property>
+               </widget>
               </item>
               <item row="8" column="0">
-               <widget class="QLabel" name="label_build_id"><property name="text"><string>Base Build ID</string></property></widget>
+               <widget class="QLabel" name="label_build_id">
+                <property name="sizePolicy"><sizepolicy hsizetype="Preferred" vsizetype="Fixed"><horstretch>0</horstretch><verstretch>0</verstretch></sizepolicy></property>
+                <property name="minimumSize"><size><width>0</width><height>32</height></size></property>
+                <property name="text"><string>Base Build ID</string></property>
+               </widget>
               </item>
               <item row="8" column="1">
                <widget class="QLineEdit" name="display_build_id">
+                <property name="sizePolicy"><sizepolicy hsizetype="Expanding" vsizetype="Fixed"><horstretch>0</horstretch><verstretch>0</verstretch></sizepolicy></property>
+                <property name="minimumSize"><size><width>0</width><height>32</height></size></property>
                 <property name="enabled"><bool>true</bool></property>
                 <property name="readOnly"><bool>true</bool></property>
                </widget>
               </item>
               <item row="9" column="0">
-               <widget class="QLabel" name="label_update_build_id"><property name="text"><string>Update Build ID</string></property></widget>
+               <widget class="QLabel" name="label_update_build_id">
+                <property name="sizePolicy"><sizepolicy hsizetype="Preferred" vsizetype="Fixed"><horstretch>0</horstretch><verstretch>0</verstretch></sizepolicy></property>
+                <property name="minimumSize"><size><width>0</width><height>32</height></size></property>
+                <property name="text"><string>Update Build ID</string></property>
+               </widget>
               </item>
               <item row="9" column="1">
                <widget class="QLineEdit" name="display_update_build_id">
+                <property name="sizePolicy"><sizepolicy hsizetype="Expanding" vsizetype="Fixed"><horstretch>0</horstretch><verstretch>0</verstretch></sizepolicy></property>
+                <property name="minimumSize"><size><width>0</width><height>32</height></size></property>
                 <property name="enabled"><bool>true</bool></property>
                 <property name="readOnly"><bool>true</bool></property>
                </widget>
               </item>
               <item row="10" column="0" colspan="2">
                <widget class="QPushButton" name="trim_xci_button">
+                <property name="sizePolicy"><sizepolicy hsizetype="Minimum" vsizetype="Fixed"><horstretch>0</horstretch><verstretch>0</verstretch></sizepolicy></property>
+                <property name="minimumSize"><size><width>0</width><height>40</height></size></property>
                 <property name="text"><string>Trim XCI File</string></property>
                 <property name="toolTip"><string>Remove unused space from XCI file to reduce file size</string></property>
                </widget>
@@ -552,7 +614,7 @@
             <item>
              <spacer name="verticalSpacer">
               <property name="orientation"><enum>Qt::Vertical</enum></property>
-              <property name="sizeHint" stdset="0"><size><width>20</width><height>40</height></size></property>
+              <property name="sizeHint" stdset="0"><size><width>20</width><height>10</height></size></property>
              </spacer>
             </item>
            </layout>
