--- a/src/citron/citron.qrc
+++ b/src/citron/citron.qrc
@@ -1,10 +1,14 @@
 <!--
 SPDX-FileCopyrightText: 2021 yuzu Emulator Project
+SPDX-FileCopyrightText: 2026 citron Emulator Project
 SPDX-License-Identifier: GPL-2.0-or-later
 -->
 
 <RCC>
     <qresource prefix="/img">
         <file alias="citron.ico">../../dist/citron.ico</file>
+    </qresource>
+    <qresource prefix="/">
+        <file alias="dist/dice.svg">../../dist/dice.svg</file>
     </qresource>
 </RCC>
